idiomized assertions in tests